# demand-forecast-mlops

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
dags/: forecast_pipeline.py
dashboard/: app.py
notebooks/: 01_eda.ipynb
src/forecast/: __init__.py  backtest.py  config.py  drift.py  features.py  ingest.py  metrics.py  models.py  predict.py  tracking.py  train.py
tests/: test_backtest.py  test_drift.py  test_features.py  test_metrics.py
