[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "demand-forecast-mlops"
version = "0.1.0"
description = "Demand forecasting pipeline with MLOps: baselines, LightGBM, MLflow, Airflow, drift monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "pyarrow==18.1.0",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
    "lightgbm==4.5.0",
    "mlflow==2.18.0",
    "joblib==1.4.2",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow==2.10.4",
]
dashboard = [
    "streamlit==1.40.2",
    "plotly==5.24.1",
]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[project.scripts]
forecast-ingest = "forecast.ingest:main"
forecast-backtest = "forecast.backtest:main"
forecast-train = "forecast.train:main"
forecast-predict = "forecast.predict:main"
forecast-drift = "forecast.drift:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
